--- a/index.html
+++ b/index.html
@@ -220,61 +220,61 @@
                     </section>
                 </section>
             </div>
-
-            <section class="section-galerie">
-                <h3>Découvrez un siècle d’histoire en photos</h3>
-                <div class="grid-wrapper">
-                    <div class="div1 tall">
-                        <img
-                            src="./assets/img/Galeriecitroen.jpg"
-                            alt=""
-                            id="citroen"
-                        />
+            <section class="galerie-container">
+                <div class="section-galerie">
+                    <h3>Découvrez un siècle d’histoire en photos</h3>
+                    <div class="grid-wrapper">
+                        <div class="div1 tall">
+                            <img
+                                src="./assets/img/Galeriecitroen.jpg"
+                                alt=""
+                                id="citroen"
+                            />
+                        </div>
+                        <div class="div2">
+                            <img
+                                src="./assets/img/GalerieHerato.jpg"
+                                alt=""
+                                id="Herato"
+                            />
+                        </div>
+                        <div class="div3 tall">
+                            <img src="./assets/img/GalerieDS.jpg" alt="" id="DS" />
+                        </div>
+                        <div class="div4">
+                            <img
+                                src="./assets/img/GalerieZastava.jpg"
+                                alt=""
+                                id="Zastava"
+                            />
+                        </div>
+                        <div class="div5">
+                            <img
+                                src="./assets/img/GalerieSel.jpg"
+                                alt=""
+                                id="Sel"
+                            />
+                        </div>
+                        <div class="div6">
+                            <img
+                                src="./assets/img/Galerie404.jpg"
+                                alt=""
+                                id="404"
+                            />
+                        </div>
+                        <div class="div7">
+                            <img
+                                src="./assets/img/Galerie2CV.jpg"
+                                alt=""
+                                id="2CV"
+                            />
+                        </div>
                     </div>
-                    <div class="div2">
-                        <img
-                            src="./assets/img/GalerieHerato.jpg"
-                            alt=""
-                            id="Herato"
-                        />
+                    <div class="decouvrir">
+                        <button class="button">Découvrir</button>
                     </div>
-                    <div class="div3 tall">
-                        <img src="./assets/img/GalerieDS.jpg" alt="" id="DS" />
-                    </div>
-                    <div class="div4">
-                        <img
-                            src="./assets/img/GalerieZastava.jpg"
-                            alt=""
-                            id="Zastava"
-                        />
-                    </div>
-                    <div class="div5">
-                        <img
-                            src="./assets/img/GalerieSel.jpg"
-                            alt=""
-                            id="Sel"
-                        />
-                    </div>
-                    <div class="div6">
-                        <img
-                            src="./assets/img/Galerie404.jpg"
-                            alt=""
-                            id="404"
-                        />
-                    </div>
-                    <div class="div7">
-                        <img
-                            src="./assets/img/Galerie2CV.jpg"
-                            alt=""
-                            id="2CV"
-                        />
-                    </div>
-                </div>
-                <div class="decouvrir">
-                    <button class="button">Découvrir</button>
                 </div>
             </section>
-
             <section class="section-confiance">
                 <h2>Ils nous font confiance</h2>
                 <p>
