header after before responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./styles/index.css" />
     </head>
     <body>
-        <!-- <header>
+        <header>
             <div class="top-bar">
                 <div class="top-bar-container">
                     <h5>Ouvert de 8h à 19h</h5>
@@ -49,7 +49,7 @@
                     <span><i class="fa-solid fa-arrow-down"></i></span>
                 </div>
             </div>
-        </header> -->
+        </header>
         <main>
             <div class="section-col-anim">
                 <section class="collection">
@@ -239,7 +239,11 @@
                             />
                         </div>
                         <div class="div3 tall">
-                            <img src="./assets/img/GalerieDS.jpg" alt="" id="DS" />
+                            <img
+                                src="./assets/img/GalerieDS.jpg"
+                                alt=""
+                                id="DS"
+                            />
                         </div>
                         <div class="div4">
                             <img
