--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -76,14 +76,23 @@
             </section>
             <section class="mustang">
                 <div class="car-content">
-                    <h2>1964</h2>
                     <div class="grid-car">
-                        <img src="../assets/img/certif-handicap.jpg" alt="" />
-                        <img src="./img/aston.png" alt="" />
+                        <div class="h2-container">
+                            <h2>1964</h2>
+                        </div>
+
+                        <img
+                            src="../assets/img/certif-handicap.jpg"
+                            alt=""
+                            id="sidebar2"
+                        />
+                        <div class="img-container">
+                            <img src="./img/aston.png" alt="" id="mustang" />
+                        </div>
                         <div class="car-txt">
                             <h4>BMW E30</h4>
                             <p>
-                                Voiture emblémartique de la série E chez BMW, la
+                                Voiture emblématique de la série E chez BMW, la
                                 E30 a marqué toute une génération par sa
                                 fiabilité et sa puissance.
                             </p>
