--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -54,11 +54,6 @@
                         <div class="h2-container">
                             <h2>1964</h2>
                         </div>
-                        <img
-                            src="../assets/img/certif-handicap.jpg"
-                            alt=""
-                            id="sidebar"
-                        />
                         <div class="img-container">
                             <img src="./img/aston.png" alt="" id="aston" />
                         </div>
@@ -81,11 +76,6 @@
                             <h2>1964</h2>
                         </div>
 
-                        <img
-                            src="../assets/img/certif-handicap.jpg"
-                            alt=""
-                            id="sidebar2"
-                        />
                         <div class="img-container">
                             <img src="./img/aston.png" alt="" id="mustang" />
                         </div>
@@ -103,36 +93,42 @@
             </section>
             <section class="bmw">
                 <div class="car-content">
-                    <h2>1964</h2>
                     <div class="grid-car">
-                        <img src="../assets/img/certif-handicap.jpg" alt="" />
-                        <img src="./img/aston.png" alt="" />
+                        <div class="h2-container">
+                            <h2>1964</h2>
+                        </div>
+                        <div class="img-container">
+                            <img src="./img/aston.png" alt="" id="aston" />
+                        </div>
                         <div class="car-txt">
-                            <h4>BUGATTI Veyron</h4>
+                            <h4>Ford MUSTANG v8</h4>
                             <p>
-                                431km/h c’est la vitesse de pointe atteinte par
-                                cette hypercar lors d’un tour sur le circuit
-                                Nuremberg le 15 juin 2010.
+                                Légendaire. Intemporelle. Ce sont les quelques
+                                mots utilisés pour décrire la puissance et le
+                                style de la Ford Mustang.
                             </p>
-                            <h6>A rejoint la collection en 2014</h6>
+                            <h6>A rejoint la collection en 1978</h6>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="bugatti">
                 <div class="car-content">
-                    <h2>1964</h2>
                     <div class="grid-car">
-                        <img src="../assets/img/certif-handicap.jpg" alt="" />
-                        <img src="./img/aston.png" alt="" />
+                        <div class="h2-container">
+                            <h2>1964</h2>
+                        </div>
+                        <div class="img-container">
+                            <img src="./img/aston.png" alt="" id="aston" />
+                        </div>
                         <div class="car-txt">
-                            <h4>Aston martin db5</h4>
+                            <h4>Ford MUSTANG v8</h4>
                             <p>
-                                Voiture anglaise iconique, utilisée dans les
-                                films de James Bond, une réelle pépite pour les
-                                collectionneurs.
+                                Légendaire. Intemporelle. Ce sont les quelques
+                                mots utilisés pour décrire la puissance et le
+                                style de la Ford Mustang.
                             </p>
-                            <h6>A rejoint la collection en 1999</h6>
+                            <h6>A rejoint la collection en 1978</h6>
                         </div>
                     </div>
                 </div>
