--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -83,10 +83,9 @@
                                 <div class="h2-container">
                                     <h2>1967</h2>
                                 </div>
-
                                 <div class="img-container">
                                     <img
-                                        src="./img/aston.png"
+                                        src="./img/mustang.png"
                                         alt=""
                                         id="mustang"
                                     />
@@ -112,7 +111,7 @@
                                 </div>
                                 <div class="img-container">
                                     <img
-                                        src="./img/aston.png"
+                                        src="./img/bmw e5.png"
                                         alt=""
                                         id="aston"
                                     />
@@ -138,7 +137,7 @@
                                 </div>
                                 <div class="img-container">
                                     <img
-                                        src="./img/aston.png"
+                                        src="./img/bugatti.png"
                                         alt=""
                                         id="aston"
                                     />
