--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
                 <div class="events-container">
                     <div class="events">
                         <div class="img-container">
-                            <img src="./assets/img/evenements01.jpg" alt="" />
+                            <img
+                                src="./assets/img/Evenement 1 sombre.png"
+                                alt=""
+                            />
                         </div>
 
                         <h4>Rassemblement</h4>
@@ -179,7 +182,10 @@
                     </div>
                     <div class="events">
                         <div class="img-container">
-                            <img src="./assets/img/evenements02.jpg" alt="" />
+                            <img
+                                src="./assets/img/Evenement 2 sombre.png"
+                                alt=""
+                            />
                         </div>
                         <h4>Bourses miniatures</h4>
                         <p>
@@ -190,7 +196,10 @@
                     </div>
                     <div class="events">
                         <div class="img-container">
-                            <img src="./assets/img/evenements03.jpg" alt="" />
+                            <img
+                                src="./assets/img/Evenement 3 sombre.png"
+                                alt=""
+                            />
                         </div>
                         <h4>Marques oubliées</h4>
                         <p>
