--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <div class="top-bar">
+            <div class="top-bar" id="back-top">
                 <div class="top-bar-container">
                     <h5>Ouvert de 8h à 19h</h5>
                     <ul>
@@ -53,6 +53,9 @@
         <main>
             <div class="section-col-anim">
                 <section class="collection">
+                    <a id="push-up" href="#back-top"
+                        ><i class="fa-solid fa-chevron-right"></i
+                    ></a>
                     <h2>Notre collection</h2>
                     <div class="collection-content">
                         <img
@@ -69,7 +72,12 @@
                             </p>
                         </div>
                         <div class="btn-container">
-                            <button class="button">En savoir plus</button>
+                            <button class="button">
+                                <a href="./Decouvrir/decouvri.html">
+                                    En savoir plus</a
+                                >
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </button>
                         </div>
                     </div>
                 </section>
@@ -85,7 +93,10 @@
                             </p>
                         </div>
                         <div class="btn-container">
-                            <button class="button">En savoir plus</button>
+                            <button class="button">
+                                En savoir plus
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </button>
                         </div>
                     </div>
                 </section>
@@ -112,7 +123,10 @@
                             </div>
                         </div>
 
-                        <button class="button">En savoir plus</button>
+                        <button class="button">
+                            En savoir plus
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
                     </div>
                     <div class="horaires">
                         <div>
@@ -131,7 +145,10 @@
                             </div>
                         </div>
 
-                        <button class="button">En savoir plus</button>
+                        <button class="button">
+                            En savoir plus
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
                     </div>
                 </div>
             </section>
@@ -178,7 +195,10 @@
                             Rassemblement de véhicules de collection. Disponible
                             d’avril à novembre 2022.
                         </p>
-                        <button class="button">En savoir Plus</button>
+                        <button class="button">
+                            En savoir plus
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
                     </div>
                     <div class="events">
                         <div class="img-container">
@@ -192,12 +212,15 @@
                             Venez découvrir la beauté d’anciens jouets à la
                             salle des fêtes, le 16 octobre 2022.
                         </p>
-                        <button class="button">En savoir Plus</button>
+                        <button class="button">
+                            En savoir plus
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
                     </div>
                     <div class="events">
                         <div class="img-container">
                             <img
-                                src="./assets/img/Evenement 3 sombre.png"
+                                src="./assets/img/Evenement 3 sombre.jpg"
                                 alt=""
                             />
                         </div>
@@ -206,7 +229,10 @@
                             Visitez une exposition organisée par l’A.M.A.V,
                             disponible du 1er avril au 6 novembre 2022.
                         </p>
-                        <button class="button">En savoir Plus</button>
+                        <button class="button">
+                            En savoir plus
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
                     </div>
                 </div>
             </section>
@@ -224,7 +250,10 @@
                                 d’animer et de valoriser le musée de
                                 l’Automobile de Valençay.
                             </p>
-                            <button class="button">En savoir plus</button>
+                            <button class="button">
+                                En savoir plus
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </button>
                         </div>
                     </section>
                 </section>
@@ -284,7 +313,10 @@
                         </div>
                     </div>
                     <div class="decouvrir">
-                        <button class="button">Découvrir</button>
+                        <button class="button">
+                            En savoir plus
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
                     </div>
                 </div>
             </section>
