--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="section-col-anim">
                 <section class="collection">
                     <a id="push-up" href="#back-top"
-                        ><i class="fa-solid fa-chevron-right"></i
+                        ><i class="fa-solid fa-chevron-up"></i
                     ></a>
                     <h2>Notre collection</h2>
                     <div class="collection-content">
