--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -61,7 +61,7 @@
                                 <div class="img-container">
                                     <img
                                         src="./img/aston.png"
-                                        alt=""
+                                        alt="Aston Martin DB5 de 1964"
                                         id="aston"
                                     />
                                 </div>
@@ -86,7 +86,7 @@
                                 <div class="img-container">
                                     <img
                                         src="./img/mustang.png"
-                                        alt=""
+                                        alt="Ford Mustang v8 de 1967"
                                         id="mustang"
                                     />
                                 </div>
@@ -112,7 +112,7 @@
                                 <div class="img-container">
                                     <img
                                         src="./img/bmw e5.png"
-                                        alt=""
+                                        alt="Bmw e30 de 1995"
                                         id="aston"
                                     />
                                 </div>
@@ -138,7 +138,7 @@
                                 <div class="img-container">
                                     <img
                                         src="./img/bugatti.png"
-                                        alt=""
+                                        alt="bugatti veyron de 2011"
                                         id="aston"
                                     />
                                 </div>
