--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="collection-content">
                         <img
                             src="./assets/img/Un-siecle-d-histoire.jpg"
-                            alt=""
+                            alt="voiture vintage noire"
                         />
                         <div class="collection-txt">
                             <h4>Un siècle d’histoire</h4>
@@ -84,7 +84,10 @@
                 <section class="animations">
                     <h2>Animations</h2>
                     <div class="animations-content">
-                        <img src="./assets/img/animation.jpg" alt="" />
+                        <img
+                            src="./assets/img/animation.jpg"
+                            alt="Voiture bleu vintage"
+                        />
                         <div class="animation-txt">
                             <h4>Plus qu’une simple visite</h4>
                             <p>
@@ -184,10 +187,8 @@
                 <div class="events-container">
                     <div class="events">
                         <div class="img-container">
-                            <img
-                                src="./assets/img/Evenement 1 sombre.png"
-                                alt=""
-                            />
+                            <img src="./assets/img/Evenement 1 sombre.png"
+                            alt="Voiture vintage SCAT"
                         </div>
 
                         <h4>Rassemblement</h4>
@@ -204,7 +205,7 @@
                         <div class="img-container">
                             <img
                                 src="./assets/img/Evenement 2 sombre.png"
-                                alt=""
+                                alt="Voiture miniatures"
                             />
                         </div>
                         <h4>Bourses miniatures</h4>
@@ -221,7 +222,7 @@
                         <div class="img-container">
                             <img
                                 src="./assets/img/Evenement 3 sombre.jpg"
-                                alt=""
+                                alt="devant de voiture rose"
                             />
                         </div>
                         <h4>Marques oubliées</h4>
@@ -242,7 +243,10 @@
                         <h2>Notre association</h2>
                     </div>
                     <section class="container">
-                        <img src="./assets/img/association.jpg" alt="" />
+                        <img
+                            src="./assets/img/association.jpg"
+                            alt="Plusieurs voitures de profil"
+                        />
                         <div class="association-txt">
                             <h4>Amis du Musée de l’Automobile de Valençay</h4>
                             <p>
@@ -265,49 +269,49 @@
                         <div class="div1 tall">
                             <img
                                 src="./assets/img/Galeriecitroen.jpg"
-                                alt=""
+                                alt="voiture citroën traction noir"
                                 id="citroen"
                             />
                         </div>
                         <div class="div2">
                             <img
                                 src="./assets/img/GalerieHerato.jpg"
-                                alt=""
+                                alt="Cadillac Eldorado cabriolet de 1967"
                                 id="Herato"
                             />
                         </div>
                         <div class="div3 tall">
                             <img
                                 src="./assets/img/GalerieDS.jpg"
-                                alt=""
+                                alt="DS VINTAGE74's"
                                 id="DS"
                             />
                         </div>
                         <div class="div4">
                             <img
                                 src="./assets/img/GalerieZastava.jpg"
-                                alt=""
+                                alt="fiat 850"
                                 id="Zastava"
                             />
                         </div>
                         <div class="div5">
                             <img
                                 src="./assets/img/GalerieSel.jpg"
-                                alt=""
+                                alt="Voiture, Mercedes Benz 300 SEL 6.3, vintage"
                                 id="Sel"
                             />
                         </div>
                         <div class="div6">
                             <img
                                 src="./assets/img/Galerie404.jpg"
-                                alt=""
+                                alt="Peugeot 404 Cabriolet Pininfarina"
                                 id="404"
                             />
                         </div>
                         <div class="div7">
                             <img
                                 src="./assets/img/Galerie2CV.jpg"
-                                alt=""
+                                alt="Citroën 2CV"
                                 id="2CV"
                             />
                         </div>
@@ -327,16 +331,40 @@
                     de vous offrir une expérience inoubliable.
                 </p>
                 <div class="grid-partenaire">
-                    <img src="./assets/img/logo-mercedes.png" alt="" />
-                    <img src="./assets/img/logo-bugatti.png" alt="" />
-                    <img src="./assets/img/logo-audi.png" alt="" />
-                    <img src="./assets/img/logo-peugeot.png" alt="" />
-                    <img src="./assets/img/logo-feu-vert.png" alt="" />
-                    <img src="./assets/img/logo-mclaren.png" alt="" />
-                    <img src="./assets/img/logo-bmw.png" alt="" />
-                    <img src="./assets/img/logo-automoto.png" alt="" />
-                    <img src="./assets/img/logo-spotify.png" alt="" />
-                    <img src="./assets/img/logo-total.png" alt="" />
+                    <img
+                        src="./assets/img/logo-mercedes.png"
+                        alt="Logo Mercedes Benz"
+                    />
+                    <img
+                        src="./assets/img/logo-bugatti.png"
+                        alt="Logo Bugatti"
+                    />
+                    <img src="./assets/img/logo-audi.png" alt="Logo Audi" />
+                    <img
+                        src="./assets/img/logo-peugeot.png"
+                        alt="Logo Peugeot"
+                    />
+                    <img
+                        src="./assets/img/logo-feu-vert.png"
+                        alt="Logo Feu Vert"
+                    />
+                    <img
+                        src="./assets/img/logo-mclaren.png"
+                        alt="Logo Mclaren"
+                    />
+                    <img src="./assets/img/logo-bmw.png" alt="Logo BMW" />
+                    <img
+                        src="./assets/img/logo-automoto.png"
+                        alt="Logo Automoto"
+                    />
+                    <img
+                        src="./assets/img/logo-spotify.png"
+                        alt="Logo Spotify"
+                    />
+                    <img
+                        src="./assets/img/logo-total.png"
+                        alt="Logo TotalEnergie"
+                    />
                 </div>
             </section>
             <footer>
@@ -385,7 +413,7 @@
                             </ul>
                         </div>
                         <div class="join-us">
-                            <img src="./assets/img/ccev.png" alt="" />
+                            <img src="./assets/img/ccev.png" alt="CCEV" />
                         </div>
                     </div>
                 </div>
