--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -14,9 +14,13 @@
     <body>
         <section class="all-container">
             <header>
-                <div class="top-bar">
+                <div class="top-bar" id="back-top2">
                     <div class="top-bar-container">
-                        <h5>Ouvert de 8h à 19h</h5>
+                        <div class="open-container">
+                            <i class="fa-regular fa-clock"></i>
+                            <h5>Ouvert de 8h à 19h</h5>
+                        </div>
+
                         <ul>
                             <li>
                                 12, avenue de la Résistance 36600 VALENCAY |
@@ -29,11 +33,11 @@
                 <div class="nav-bar">
                     <div class="nav-bar-container">
                         <img
-                            src="./assets/img/logo-jaune.png"
+                            src="/assets/img/logo-jaune.png"
                             alt="logo du musée de l'automobile"
                         />
                         <ul>
-                            <li>Accueil</li>
+                            <li><a href="/index.html">Accueil</a></li>
                             <li>Découvrir</li>
                             <li>Accès</li>
                             <li>A.M.A.V</li>
@@ -52,6 +56,9 @@
             </header>
             <main>
                 <section class="collection">
+                    <a id="push-up" href="#back-top2"
+                        ><i class="fa-solid fa-chevron-up"></i
+                    ></a>
                     <section class="aston-martin">
                         <div class="car-content">
                             <div class="grid-car">
