--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@
                 <div class="events-container">
                     <div class="events">
                         <div class="img-container">
-                            <img src="./assets/img/Evenement 1 sombre.png"
-                            alt="Voiture vintage SCAT"
+                            <img
+                                src="./assets/img/Evenement 1 sombre.png"
+                                alt="Voiture vintage SCAT"
+                            />
                         </div>
 
                         <h4>Rassemblement</h4>
@@ -350,8 +352,8 @@
             <section class="section-confiance">
                 <h2>Ils nous font confiance</h2>
                 <p>
-                    Nos partenaires nous soutiennent continuellement dans le but
-                    de vous offrir une expérience inoubliable.
+                    Nous exposons des dizaines de véhicules, provenant de divers
+                    constructeurs.
                 </p>
                 <div class="grid-partenaire">
                     <img
@@ -363,14 +365,7 @@
                         alt="Logo Bugatti"
                     />
                     <img src="./assets/img/logo-audi.png" alt="Logo Audi" />
-                    <img
-                        src="./assets/img/logo-peugeot.png"
-                        alt="Logo Peugeot"
-                    />
-                    <img
-                        src="./assets/img/logo-feu-vert.png"
-                        alt="Logo Feu Vert"
-                    />
+
                     <img
                         src="./assets/img/logo-mclaren.png"
                         alt="Logo Mclaren"
@@ -379,14 +374,6 @@
                     <img
                         src="./assets/img/logo-automoto.png"
                         alt="Logo Automoto"
-                    />
-                    <img
-                        src="./assets/img/logo-spotify.png"
-                        alt="Logo Spotify"
-                    />
-                    <img
-                        src="./assets/img/logo-total.png"
-                        alt="Logo TotalEnergie"
                     />
                 </div>
             </section>
