--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Musée de l'automobile de Valençay</title>
+
+        <meta
+            name="Venez découvrir un siècle d'automobile à travers notre collection. Vous aurez la chance d'être à côté de l'Aston Martin DB5 de James Bond ou bien même d'une Bugatti Veyron de 2011."
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
